<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.albertozanon</groupId>
	<artifactId>MasterThesisLMM</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>MasterThesisLMM</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- maven plugins -->
		<compiler-plugin.version>3.8.1</compiler-plugin.version>
	</properties>
	
		<dependencies>
		<dependency>
			<groupId>net.finmath</groupId>
			<artifactId>finmath-lib</artifactId>
			<version>5.0.6-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>net.finmath</groupId>
			<artifactId>finmath-lib-plot-extensions</artifactId>
			<version>0.3.10</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerVersion>11</compilerVersion>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub qntlb Apache Maven Packages</name>
			<url>file:///${project.basedir}/local-maven-repo</url>
		</repository>
	</distributionManagement>

</project>
	